# strata-harvest

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  commit_strata.sh  mkdocs.yml  pyproject.toml
.claude/: settings.json
.cursor/rules/: pdt-api-shared.mdc
.github/workflows/: ci.yml  dependabot-auto-merge.yml  pypi-publish.yml
docs/: ARCHITECTURE_ADVISORY_2026-04-16.md  adding-a-parser.md  advanced-usage.md  index.md  llm-configuration.md
docs/adr/: ADR-002-tiered-fetcher-and-extraction.md
docs/api/: crawler.md  detector.md  models.md  parsers.md  public.md
scripts/: generate_ground_truth.py
src/strata_harvest/: __init__.py  ats_fingerprints.py  crawler.py  detector.py  models.py
src/strata_harvest/browser/: __init__.py  crawl4ai_fetcher.py
src/strata_harvest/discovery/: __init__.py  exa_discovery.py
src/strata_harvest/extract/: __init__.py  local_llm.py  pipeline.py  prune.py  schema.py
src/strata_harvest/ocr/: __init__.py  client.py  router.py
src/strata_harvest/parsers/: __init__.py  _structured_data.py  ashby.py  base.py  breezy.py  crawl4ai_extractor.py  eightfold.py  greenhouse.py  icims.py  lever.py  llm_fallback.py  phenom.py  pinpoint.py  recruitee.py  rippling.py  sap_successfactors.py  smartrecruiters.py  teamtailor.py  workday.py
src/strata_harvest/utils/: __init__.py  hashing.py  http.py  impersonating_fetcher.py  pdf.py  rate_limiter.py  robots.py  sitemap.py  stealth_fetcher.py
src/strata_harvest/validator/: __init__.py  careers_page.py
tests/: __init__.py  conftest.py  fixture_loader.py  mypy_typing_consumer.py  robots_helpers.py  test_ashby_parser.py  test_ashby_slug_resolver.py  test_careers_page_validator.py  test_crawl4ai_extractor.py  test_crawl4ai_fetcher.py  test_crawler.py  test_detector.py  test_edge_cases.py  test_exa_discovery.py  test_extract_pipeline.py  test_fixture_ground_truth.py  test_greenhouse_parser.py  test_hashing.py  test_http.py  test_impersonating_fetcher.py  test_integration.py  test_lever_parser.py  test_llm_fallback.py  test_models.py  test_new_ats_providers.py  test_packaging.py  test_parsers.py  test_public_api.py  test_rate_limiter.py  test_rippling_parser.py  test_robots.py  test_sitemap.py  test_smartrecruiters_parser.py  test_stealth_fetcher.py  test_stub_fallback.py  test_workday_icims_parsers.py
tests/fixtures/ashby/: ashby_empty_board.json  ashby_graphql_error.json  ashby_job_board_response.json  ashby_single_posting.json
tests/fixtures/career_pages/: ashby_embedded.html  ashby_granola_style.html  ashby_notion_style.html  boutique_agency.html  breezy_embedded.html  eightfold_embedded.html  greenhouse_embedded.html  icims_embedded.html  lever_embedded.html  local_restaurant_group.html  phenom_embedded.html  pinpoint_embedded.html  recruitee_embedded.html  sap_successfactors_embedded.html  teamtailor_embedded.html  unknown_custom.html  workday_embedded.html
tests/fixtures/expected/ashby/: ashby_job_board_response.json  ashby_single_posting.json
tests/fixtures/expected/career_pages/: boutique_agency.json  local_restaurant_group.json  unknown_custom.json
tests/fixtures/expected/greenhouse_api/: acmecorp.json  greenleaf.json  megacorp.json
tests/fixtures/expected/lever/: lever_multi_postings.json  lever_single_posting.json
tests/fixtures/greenhouse_api/: acmecorp.json  greenleaf.json  megacorp.json
tests/fixtures/lever/: lever_multi_postings.json  lever_single_posting.json
tests/fixtures/llm_fallback/: spa_rendered_careers.html  startup_inline_careers.html  table_careers.html
tests/ocr/: test_client.py  test_router.py
tests/utils/: test_pdf.py
