[project]
name = "strata-harvest"
version = "0.1.1"
description = "Career page scraping and ATS parsing library for job search automation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Andrew Crenshaw" },
]
keywords = ["job-search", "career", "scraping", "ats", "parsing"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
llm = [
    "litellm>=1.50",
]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.22.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
ocr = [
    "pypdfium2>=4.0",
    "httpx>=0.27",
    "pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/andrewcrenshaw/strata-harvest"
Repository = "https://github.com/andrewcrenshaw/strata-harvest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/strata_harvest"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "pypdfium2"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "litellm"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "verification: fast tests for CI verification slice",
    "integration: tests requiring external services",
]

[dependency-groups]
dev = [
    "respx>=0.22.0",
]
